--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "less": "^3.0.1",
     "less-loader": "^4.0.5",
+    "request": "^2.83.0",
     "vue": "^2.5.2",
+    "vue-resource": "^1.3.6",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
