--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "less": "^3.0.1",
     "less-loader": "^4.0.5",
     "request": "^2.83.0",
+    "superagent": "^3.8.2",
     "vue": "^2.5.2",
-    "vue-resource": "^1.3.6",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
