--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "es-cookie": "^1.1.1",
     "less": "^3.0.1",
     "less-loader": "^4.0.5",
     "request": "^2.83.0",
