--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "es-cookie": "^1.1.1",
     "less": "^3.0.1",
-    "less-loader": "^4.0.5",
     "request": "^2.83.0",
     "superagent": "^3.8.2",
     "superagent-throttle": "^0.2.5",
     "throttle-debounce": "^1.0.1",
     "vue": "^2.5.2",
+    "vue-material": "^1.0.0-beta-7",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
