--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "es-cookie": "^1.1.1",
     "less": "^3.0.1",
+    "less-loader": "^4.1.0",
     "request": "^2.83.0",
     "superagent": "^3.8.2",
     "superagent-throttle": "^0.2.5",
